--- a/docs/_layouts/hymn.html
+++ b/docs/_layouts/hymn.html
@@ -1,132 +1,282 @@
 ---
 layout: default
 ---
-<div class="container">
-  <div class="row">
-    <h1 class="col-sm-8 mx-auto border shadow bg-light my-1 p-2">{{ page.title }}</h1>
-  </div>
-  <div class="row">
-    <div class="col-sm-8 m-1 p-2">
-      {{ content }}
-    </div>
-    <div class="col-sm-4 m-1 p-2">
+{%- assign id=page.hymn_id -%}
+{%- if page.products -%}
+{%- assign products_available=true -%}
+{%- else -%}
+{%- assign products_available=nil -%}
+{%- endif -%}
+{%- if page.products and page.products contains 'published' and page.products contains 'review' -%}
+{%- assign updates_available=true -%}
+{%- else -%}
+{%- assign updates_available=nil -%}
+{%- endif -%}
+{%- assign reviews=(site.reviews | where: "hymn_id", page.hymn_id) -%}
+{%- if reviews.size > 0 -%}
+{%- assign reviews_available=true -%}
+{%- else -%}
+{%- assign reviews_available=nil -%}
+{%- endif -%}
+{%- assign research=(site.research | where: "hymn_id", page.hymn_id) -%}
+{%- if research.size > 0 -%}
+{%- assign research_available=true -%}
+{%- else -%}
+{%- assign research_available=nil -%}
+{%- endif -%}
+{%- assign articles=(site.posts | where: "hymn_id", id) -%}
+{%- if articles.size > 0 -%}
+{%- assign articles_available=true -%}
+{%- else -%}
+{%- assign articles_available=nil -%}
+{%- endif -%}
+{%- if page.external_resources -%}
+{%- assign external_available=true -%}
+{%- else -%}
+{%- assign external_available=nil -%}
+{%- endif -%}
+<div class="mx-auto" style="width: 80%;"><h1 class="text-center font-weight-bold">{{ page.title }}</h1></div>
+<div class="card border shadow border-dark bg-color-1 rounded mx-auto mb-3 p-2" style="width: 80%;">
+  <div class="card-body">
+    <ul class="nav nav-tabs" id="{{ id }}_tab" role="tablist">
+      <li class="nav-item border">
+        <a class="nav-link active" id="{{ id }}_info_tab" data-toggle="tab" href="#{{ id }}_info" role="tab" aria-controls="info" aria-selected="true">Info</a>
+      </li>
+{%- if products_available -%}
+      <li class="nav-item border">
+        <a class="nav-link" id="{{ id }}_products_tab" data-toggle="tab" href="#{{ id }}_products" role="tab" aria-controls="products" aria-selected="true">Products</a>
+      </li>
+{%- endif -%}
+{%- if updates_available -%}
+      <li class="nav-item border">
+        <a class="nav-link" id="{{ id }}_updates_tab" data-toggle="tab" href="#{{ id }}_updates" role="tab" aria-controls="updates" aria-selected="true">Updates</a>
+      </li>
+{%- endif -%}
+{%- if reviews_available -%}
+      <li class="nav-item border">
+        <a class="nav-link" id="{{ id }}_reviews_tab" data-toggle="tab" href="#{{ id }}_reviews" role="tab" aria-controls="reviews" aria-selected="true">Review Instructions</a>
+      </li>
+{%- endif -%}
+{%- if research_available -%}
+      <li class="nav-item border">
+        <a class="nav-link" id="{{ id }}_research_tab" data-toggle="tab" href="#{{ id }}_research" role="tab" aria-controls="research" aria-selected="true">Research</a>
+      </li>
+{%- endif -%}
+{%- if articles_available -%}
+      <li class="nav-item border">
+        <a class="nav-link" id="{{ id }}_articles_tab" data-toggle="tab" href="#{{ id }}_articles" role="tab" aria-controls="articles" aria-selected="true">Articles</a>
+      </li>
+{%- endif -%}
+{%- if external_available -%}
+      <li class="nav-item border">
+        <a class="nav-link" id="{{ id }}_external_tab" data-toggle="tab" href="#{{ id }}_external" role="tab" aria-controls="external" aria-selected="true">External</a>
+      </li>
+{%- endif -%}
+    </ul>
+    <div class="tab-content border" id="{{ id }}_tab_content">
+      <div class="tab-pane fade container-fluid show active" id="{{ id }}_info" role="tabpanel" aria-labelledby="{{ id }}_info_tab">
+        <div class="row">
+          <div class="col-4">
+            <h4>Poetry Information</h4>
 {%- if page.poetry_elements -%}
-      <dl>
+              <dl>
 {%- if page.poetry_elements.meter -%}
-        <dt>Meter:</dt>
-        <dd>{{ page.poetry_elements.meter }}</dd>
+                <dt>Meter:</dt>
+                <dd>{{ page.poetry_elements.meter }}</dd>
 {%- endif %}
 {%- if page.poetry_elements.poet -%}
-        <dt>Poet:</dt>
-        <dd>{{ page.poetry_elements.poet }}</dd>
+                <dt>Poet:</dt>
+                <dd>{{ page.poetry_elements.poet }}</dd>
 {%- endif %}
 {%- if page.poetry_elements.translator -%}
-        <dt>Translator:</dt>
-        <dd>{{ page.poetry_elements.translator }}</dd>
+                <dt>Translator:</dt>
+                <dd>{{ page.poetry_elements.translator }}</dd>
 {%- endif %}
 {%- if page.poetry_elements.versifier -%}
-        <dt>Versifier:</dt>
-        <dd>{{ page.poetry_elements.versifier }}</dd>
+                <dt>Versifier:</dt>
+                <dd>{{ page.poetry_elements.versifier }}</dd>
 {%- endif %}
 {%- if page.poetry_elements.altered -%}
-        <dt>Altered:</dt>
-        <dd>{{ page.poetry_elements.altered }}</dd>
+                <dt>Altered:</dt>
+                <dd>{{ page.poetry_elements.altered }}</dd>
 {%- endif %}
-      </dl>
+              </dl>
 {%- else -%}
-      <p>No poetry information is available for this hymn</p>
+              <p>No poetry information is available for this hymn</p>
+{%- endif -%}
+          </div>
+          <div class="col-4">
+            <h4>Tune Information</h4>
+{%- if page.tune_elements -%}
+              <dl>
+{%- if page.tune_elements.name -%}
+                <dt>name:</dt>
+                <dd>{{ page.tune_elements.name }}</dd>
+{%- endif %}
+{%- if page.tune_elements.composer -%}
+                <dt>composer:</dt>
+                <dd>{{ page.tune_elements.composer }}</dd>
+{%- endif %}
+{%- if page.tune_elements.arranger -%}
+                <dt>arranger:</dt>
+                <dd>{{ page.tune_elements.arranger }}</dd>
+{%- endif %}
+{%- if page.tune_elements.altered -%}
+                <dt>Altered:</dt>
+                <dd>{{ page.tune_elements.altered }}</dd>
+{%- endif %}
+              </dl>
+{%- else -%}
+              <p>No tune information is available for this hymn</p>
+{%- endif -%}
+          </div>
+          <div class="col-4">
+            <h4>Status</h4>
+          </div>
+        </div>
+      </div>
+{%- if products_available -%}
+      <div class="tab-pane fade container-fluid" id="{{ id }}_products" role="tabpanel" aria-labelledby="{{ id }}_products_tab">
+{%- if page.products contains 'published' -%}
+{%- assign location="published" -%}
+{%- else -%}
+{%- assign location="review" -%}
+{%- endif -%}
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="list-group">
+              <h2 class="list-item" style="width: 100%; text-align: center;">Sheet Music</h2>
+              <a class="list-item mx-auto border shadow-lg bg-light m-1 p-2" href="{{ site.baseurl }}/Source/{{ location }}/{{ page.hymn_id }}/{{ page.hymn_id }}_sheet_music.pdf">
+                <img src="{{ site.baseurl }}/Source/{{ location }}/{{ page.hymn_id }}/{{ page.hymn_id }}_sheet_music_thumbnail.png" alt="{{ page.title }} Sheet Music" width=300/>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="list-group">
+              <h2 class="list-item" style="width: 100%; text-align: center;">Slides</h2>
+              <a class="list-item mx-auto border shadow-lg bg-light m-1 p-2" href="{{ site.baseurl }}/Source/{{ location }}/{{ page.hymn_id }}/{{ page.hymn_id }}_slides.pdf">
+                <img src="{{ site.baseurl }}/Source/{{ location }}/{{ page.hymn_id }}/{{ page.hymn_id }}_slides_thumbnail.png" alt="{{ page.title }} Slides" width=300/>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="list-group">
+              <h2 class="list-item" style="width: 100%; text-align: center;">Practice MP3s</h2>
+              <div class="list-item list-group border shadow-lg bg-light m-1 p-2">
+                <h4 class="list-item mt-2">All:</h4>
+                <audio class="list-item" controls>
+                  <source src="{{ site.baseurl }}/Source/{{ location }}/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_all.mp3" type="audio/mpeg">
+                  Your browser does not support this audio element
+                </audio>
+                <h4 class="list-item mt-2">Soprano:</h4>
+                <audio class="list-item" controls>
+                  <source src="{{ site.baseurl }}/Source/{{ location }}/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_soprano.mp3" type="audio/mpeg">
+                  Your browser does not support this audio element
+                </audio>
+                <h4 class="list-item mt-2">Alto:</h4>
+                <audio class="list-item" controls>
+                  <source src="{{ site.baseurl }}/Source/{{ location }}/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_alto.mp3" type="audio/mpeg">
+                  Your browser does not support this audio element
+                </audio>
+                <h4 class="list-item mt-2">Tenor:</h4>
+                <audio class="list-item" controls>
+                  <source src="{{ site.baseurl }}/Source/{{ location }}/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_tenor.mp3" type="audio/mpeg">
+                  Your browser does not support this audio element
+                </audio>
+                <h4 class="list-item mt-2">Bass:</h4>
+                <audio class="list-item" controls>
+                  <source src="{{ site.baseurl }}/Source/{{ location }}/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_bass.mp3" type="audio/mpeg">
+                  Your browser does not support this audio element
+                </audio>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+{%- endif -%}
+{%- if updates_available -%}
+      <div class="tab-pane fade container-fluid" id="{{ id }}_updates" role="tabpanel" aria-labelledby="{{ id }}_updates_tab">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="list-group">
+              <h2 class="list-item" style="width: 100%; text-align: center;">Sheet Music</h2>
+              <a class="list-item mx-auto border shadow-lg bg-light m-1 p-2" href="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_sheet_music.pdf">
+                <img src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_sheet_music_thumbnail.png" alt="{{ page.title }} Sheet Music" width=300/>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="list-group">
+              <h2 class="list-item" style="width: 100%; text-align: center;">Slides</h2>
+              <a class="list-item mx-auto border shadow-lg bg-light m-1 p-2" href="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_slides.pdf">
+                <img src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_slides_thumbnail.png" alt="{{ page.title }} Slides" width=300/>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="list-group">
+              <h2 class="list-item" style="width: 100%; text-align: center;">Practice MP3s</h2>
+              <div class="list-item list-group border shadow-lg bg-light m-1 p-2">
+                <h4 class="list-item mt-2">All:</h4>
+                <audio class="list-item" controls>
+                  <source src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_all.mp3" type="audio/mpeg">
+                  Your browser does not support this audio element
+                </audio>
+                <h4 class="list-item mt-2">Soprano:</h4>
+                <audio class="list-item" controls>
+                  <source src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_soprano.mp3" type="audio/mpeg">
+                  Your browser does not support this audio element
+                </audio>
+                <h4 class="list-item mt-2">Alto:</h4>
+                <audio class="list-item" controls>
+                  <source src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_alto.mp3" type="audio/mpeg">
+                  Your browser does not support this audio element
+                </audio>
+                <h4 class="list-item mt-2">Tenor:</h4>
+                <audio class="list-item" controls>
+                  <source src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_tenor.mp3" type="audio/mpeg">
+                  Your browser does not support this audio element
+                </audio>
+                <h4 class="list-item mt-2">Bass:</h4>
+                <audio class="list-item" controls>
+                  <source src="{{ site.baseurl }}/Source/review/{{ page.hymn_id }}/{{ page.hymn_id }}_audio_bass.mp3" type="audio/mpeg">
+                  Your browser does not support this audio element
+                </audio>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+{%- endif -%}
+{%- if reviews_available -%}
+      <div class="tab-pane fade" id="{{ id }}_reviews" role="tabpanel" aria-labelledby="{{ id }}_reviews_tab">
+        {{ reviews[0].content | markdownify }}
+      </div>
+{%- endif -%}
+{%- if research_available -%}
+      <div class="tab-pane fade" id="{{ id }}_research" role="tabpanel" aria-labelledby="{{ id }}_research_tab">
+        {{ research[0].content | markdownify }}
+      </div>
+{%- endif -%}
+{%- if articles_available -%}
+      <div class="tab-pane fade" id="{{ id }}_articles" role="tabpanel" aria-labelledby="{{ id }}_articles_tab">
+        <h4>{{ articles.size }}{% if articles.size == 1 %} article{% else %} articles{% endif %} related to this hymn {% if articles.size == 1 %}is{% else %}are{% endif %} available:</h4>
+        <ul>
+{%- for article in articles -%}
+          <li><a href="{{ article.url | relative_url }}">{{ article.title }}</a></li>
+{%- endfor -%}
+        </ul>
+      </div>
+{%- endif -%}
+{%- if external_available -%}
+      <div class="tab-pane fade" id="{{ id }}_external" role="tabpanel" aria-labelledby="{{ id }}_external_tab">Information available externally that is related to {{ page.title }}:
+        <ul>
+{%- for external_resource in page.external_resources -%}
+          <li><a href="{{ external_resource.url }}">{{ external_resource.name }}</a></li>
+{%- endfor -%}
+        </ul>
+      </div>
 {%- endif -%}
     </div>
-  </div>
-{%- if page.products.size == 2 -%}
-<!--Side by Side list of products-->
-  <div class="row">
-    <h1 class="col-sm-12 mt-5 mx-auto" style="width: 100%; text-align: center;">Sheet Music</h1>
-  </div>
-  <div class="row">
-    <div class="col-sm-6 list-group">
-      <h2 class="list-item" style="width: 100%; text-align: center;">Current</h2>
-      <div class="list-item mx-auto border shadow-lg bg-light m1 p-2">
-{%- include sheet_music.html hymn=page version="published" -%}
-      </div>
-    </div>
-    <div class="col-sm-6 list-group">
-      <h2 class="list-item" style="width: 100%; text-align: center;">Updated</h2>
-      <div class="list-item mx-auto border shadow-lg bg-light m1 p-2">
-{%- include sheet_music.html hymn=page version="review" -%}
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <h1 class="col-sm-12 mt-5 mx-auto" style="width: 100%; text-align: center;">Slides</h1>
-  </div>
-  <div class="row">
-    <div class="col-sm-6 list-group">
-      <h2 class="list-item" style="width: 100%; text-align: center;">Current</h2>
-      <div class="list-item mx-auto border shadow-lg bg-light m1 p-2">
-{%- include slides.html hymn=page version="published" -%}
-      </div>
-    </div>
-    <div class="col-sm-6 list-group">
-      <h2 class="list-item" style="width: 100%; text-align: center;">Updated</h2>
-      <div class="list-item mx-auto border shadow-lg bg-light m1 p-2">
-{%- include slides.html hymn=page version="review" -%}
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <h1 class="col-sm-12 mt-5 mx-auto" style="width: 100%; text-align: center;">Practice MP3s</h1>
-  </div>
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="list-group">
-        <h2 class="list-item" style="width: 100%; text-align: center;">Current</h2>
-        <div class="list-item border shadow-lg bg-light m-1 p-2">
-{%- include audio.html hymn=page version="published" -%}
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="list-group">
-        <h2 class="list-item" style="width: 100%; text-align: center;">Updated</h2>
-        <div class="list-item border shadow-lg bg-light m-1 p-2">
-{%- include audio.html hymn=page version="review" -%}
-        </div>
-      </div>
-    </div>
-  </div>
-{%- else -%}
-<!--Just the review materials-->
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="list-group">
-        <h2 class="list-item" style="width: 100%; text-align: center;">Sheet Music</h2>
-        <div class="list-item mx-auto border shadow-lg bg-light m1 p-2">
-{%- include sheet_music.html hymn=page version="review" -%}
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="list-group">
-        <h2 class="list-item" style="width: 100%; text-align: center;">Slides</h2>
-        <div class="list-item mx-auto border shadow-lg bg-light m1 p-2">
-{%- include slides.html hymn=page version="review" -%}
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="list-group">
-        <h2 class="list-item" style="width: 100%; text-align: center;">Practice MP3s</h2>
-        <div class="list-item border shadow-lg bg-light m-1 p-2">
-{%- include audio.html hymn=page version="review" -%}
-        </div>
-      </div>
-    </div>
-  </div>
-{%- endif -%}
-</div>
-<div class="container">
-  <div class="row">
-    <h1 class="mb-5" style="width: 100%; text-align: center;">{{ page.title }}</h1>
   </div>
 </div>
