Polished the website
Tried to tie off all the loose ends.  The website and the GitHub project now match in terms of hymns being worked on and their state; and entries for the website are now linked to the Github issues.  All review instructions are in place and everything seems to render.  All the research is in, with supporting documents copied over.

--- a/docs/_includes/hymn_card.html
+++ b/docs/_includes/hymn_card.html
@@ -49,24 +49,9 @@
         <a class="nav-link" id="{{ id }}_updates_tab" data-toggle="tab" href="#{{ id }}_updates" role="tab" aria-controls="updates" aria-selected="true">Updates</a>
       </li>
 {%- endif -%}
-{%- if reviews_available -%}
+{%- if reviews_available or research_available or articles_available or external_available -%}
       <li class="nav-item border">
-        <a class="nav-link" id="{{ id }}_reviews_tab" data-toggle="tab" href="#{{ id }}_reviews" role="tab" aria-controls="reviews" aria-selected="true">Review Instructions</a>
-      </li>
-{%- endif -%}
-{%- if research_available -%}
-      <li class="nav-item border">
-        <a class="nav-link" id="{{ id }}_research_tab" data-toggle="tab" href="#{{ id }}_research" role="tab" aria-controls="research" aria-selected="true">Research</a>
-      </li>
-{%- endif -%}
-{%- if articles_available -%}
-      <li class="nav-item border">
-        <a class="nav-link" id="{{ id }}_articles_tab" data-toggle="tab" href="#{{ id }}_articles" role="tab" aria-controls="articles" aria-selected="true">Articles</a>
-      </li>
-{%- endif -%}
-{%- if external_available -%}
-      <li class="nav-item border">
-        <a class="nav-link" id="{{ id }}_external_tab" data-toggle="tab" href="#{{ id }}_external" role="tab" aria-controls="external" aria-selected="true">External</a>
+        <a class="nav-link" id="{{ id }}_related_tab" data-toggle="tab" href="#{{ id }}_related" role="tab" aria-controls="related" aria-selected="true">Related</a>
       </li>
 {%- endif -%}
     </ul>
@@ -245,33 +230,29 @@
         </div>
       </div>
 {%- endif -%}
-{%- if reviews_available -%}
-      <div class="tab-pane fade" id="{{ id }}_reviews" role="tabpanel" aria-labelledby="{{ id }}_reviews_tab">
-        {{ reviews[0].content | markdownify }}
-      </div>
-{%- endif -%}
-{%- if research_available -%}
-      <div class="tab-pane fade" id="{{ id }}_research" role="tabpanel" aria-labelledby="{{ id }}_research_tab">
-        {{ research[0].content | markdownify }}
-      </div>
-{%- endif -%}
+{%- if reviews_available or research_available or articles_available or external_available -%}
+      <div class="tab-pane fade" id="{{ id }}_related" role="tabpanel" aria-labelledby="{{ id }}_related_tab">
 {%- if articles_available -%}
-      <div class="tab-pane fade" id="{{ id }}_articles" role="tabpanel" aria-labelledby="{{ id }}_articles_tab">
         <h4>{{ articles.size }}{% if articles.size == 1 %} article{% else %} articles{% endif %} related to this hymn {% if articles.size == 1 %}is{% else %}are{% endif %} available:</h4>
         <ul>
 {%- for article in articles -%}
           <li><a href="{{ article.url | relative_url }}">{{ article.title }}</a></li>
 {%- endfor -%}
         </ul>
-      </div>
 {%- endif -%}
 {%- if external_available -%}
-      <div class="tab-pane fade" id="{{ id }}_external" role="tabpanel" aria-labelledby="{{ id }}_external_tab">Information available externally that is related to {{ include.hymn.title }}:
         <ul>
 {%- for external_resource in include.hymn.external_resources -%}
           <li><a href="{{ external_resource.url }}">{{ external_resource.name }}</a></li>
 {%- endfor -%}
         </ul>
+{%- endif -%}
+{%- if reviews_available -%}
+        <a class="btn" href="{{ reviews[0].url | relative_url }}">Review Page</a>
+{%- endif -%}
+{%- if research_available -%}
+        <a class="btn" href="{{ research[0].url | relative_url }}">Research Page</a>
+{%- endif -%}
       </div>
 {%- endif -%}
     </div>
