--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -30,10 +30,10 @@
           <a class="nav-link" href="{{ "/about" | relative_url }}">About</a>
         </li>
         <li class="nav-item{% if page.navButton == "Hymns" %} active{% endif %}">
-          <a class="nav-link" href="{{ "/hymns" | relative_url }}">Hymns</a>
+          <a class="nav-link" href="{{ "/hymns" | relative_url }}">Hymns <span class="badge badge-light">{{ site.hymns.size }}</span></a>
         </li>
         <li class="nav-item{% if page.navButton == "Reviews" %} active{% endif %}">
-          <a class="nav-link" href="{{ "/reviews" | relative_url }}">Reviews</a>
+          <a class="nav-link" href="{{ "/reviews" | relative_url }}">Reviews <span class="badge badge-light">{{ site.reviews.size }}</span></a>
         </li>
         <li class="nav-item{% if page.navButton == "Posts" %} active{% endif %}">
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
