--- a/docs/_layouts/hymn.html
+++ b/docs/_layouts/hymn.html
@@ -40,7 +40,10 @@ layout: default
   <div class="card-body">
     <ul class="nav nav-tabs" id="{{ id }}_tab" role="tablist">
       <li class="nav-item border">
-        <a class="nav-link active" id="{{ id }}_info_tab" data-toggle="tab" href="#{{ id }}_info" role="tab" aria-controls="info" aria-selected="true">Info</a>
+        <a class="nav-link active" id="{{ id }}_main_tab" data-toggle="tab" href="#{{ id }}_main" role="tab" aria-controls="main" aria-selected="true">Main</a>
+      </li>
+      <li class="nav-item border">
+        <a class="nav-link" id="{{ id }}_info_tab" data-toggle="tab" href="#{{ id }}_info" role="tab" aria-controls="info" aria-selected="true">Info</a>
       </li>
 {%- if products_available -%}
       <li class="nav-item border">
@@ -59,7 +62,52 @@ layout: default
 {%- endif -%}
     </ul>
     <div class="tab-content border" id="{{ id }}_tab_content">
-      <div class="tab-pane fade container-fluid show active" id="{{ id }}_info" role="tabpanel" aria-labelledby="{{ id }}_info_tab">
+      <div class="tab-pane fade container-fluid show active" id="{{ id }}_main" role="tabpanel" aria-labelledby="{{ id }}_main_tab">
+        <div class="row">
+          <div class="col-md">
+            <div class="border shadow p-4 mt-2 mb-5" style="background-color: #FCFBE3;">
+              <h4 class="font-weight-bold">Notes</h4>
+{%- if page.notes -%}
+              <p>{{ page.notes }}</p>
+{%- else -%}
+              <p>Notes are not available for this hymn.</p>
+{%- endif -%}
+            </div>
+            <div class="border shadow p-4 mt-2 mb-5" style="background-color: #FCFBE3;">
+              <h4 class="font-weight-bold">Scripture References</h4>
+{%- if page.scriptures and page.scriptures.size > 0 -%}
+              <ul>
+{%- for scripture in page.scriptures -%}
+                <li>{{ scripture }}</li>
+{%- endfor -%}
+              </ul>
+{%- else -%}
+              <p>Scripture references are not available for this hymn.</p>
+{%- endif -%}
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="border shadow p-4 mt-2 mb-5" style="background-color: #FCFBE3;">
+              <h4 class="font-weight-bold mb-3">Lyrics</h4>
+{%- if page.lyrics -%}
+              <dl>
+{%- for lyric in page.lyrics -%}
+                <dt>{{ lyric.name }}</dt>
+                <dd>
+{%- for line in lyric.lines -%}
+                  {{ line }}<br/>
+{%- endfor -%}
+                </dd>
+{%- endfor -%}
+              </dl>
+{%- else -%}
+<p>No Lyrics are available for this hymn.</p>
+{%- endif -%}
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tab-pane fade container-fluid show" id="{{ id }}_info" role="tabpanel" aria-labelledby="{{ id }}_info_tab">
         <div class="row">
           <div class="col-md">
             <div class="border shadow p-4 mt-2 mb-5" style="background-color: #FCFBE3;">
@@ -142,25 +190,6 @@ layout: default
               </dl>
 {%- else -%}
               <p>No copyright information is available for this hymn</p>
-{%- endif -%}
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="border shadow p-4 mt-2 mb-5" style="background-color: #FCFBE3;">
-              <h4 class="font-weight-bold mb-3">Lyrics</h4>
-{%- if page.lyrics -%}
-              <dl>
-{%- for lyric in page.lyrics -%}
-                <dt>{{ lyric.name }}</dt>
-                <dd>
-{%- for line in lyric.lines -%}
-                  {{ line }}<br/>
-{%- endfor -%}
-                </dd>
-{%- endfor -%}
-              </dl>
-{%- else -%}
-<p>No Lyrics are available for this hymn.</p>
 {%- endif -%}
             </div>
           </div>
