--- a/docs/_layouts/review.html
+++ b/docs/_layouts/review.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <div class="container">
+  <h1 class="text-center mb-4 font-weight-bold">{{ page.title }}</h1>
   <div class="row">
     <div class="col-sm-8 mx-auto border shadow m-1 p-2">
       <div class="card">
